# shadcn-ui

./: Cargo.toml  LEPTOS_EXTRACTION_PLAN.md  LICENSE.md  Makefile  README.md  flake.nix  package.json
.direnv/: flake-profile-2-link
