[workspace]
members = [
    "packages/leptos/accordion",
    "packages/leptos/alert",
    "packages/leptos/alert-dialog",
    "packages/leptos/aspect-ratio",
    "packages/leptos/badge",
    "packages/leptos/breadcrumb",
    "packages/leptos/button",
    "packages/leptos/calendar",
    "packages/leptos/card",
    "packages/leptos/carousel",
    "packages/leptos/checkbox",
    "packages/leptos/collapsible",
    "packages/leptos/combobox",
    "packages/leptos/command",
    "packages/leptos/context-menu",
    "packages/leptos/date-picker",
    "packages/leptos/dialog",
    "packages/leptos/drawer",
    "packages/leptos/dropdown-menu",
    "packages/leptos/form",
    "packages/leptos/hover-card",
    "packages/leptos/input",
    "packages/leptos/input-otp",
    "packages/leptos/label",
    "packages/leptos/lazy-loading",
    "packages/leptos/menubar",
    "packages/leptos/navigation-menu",
    "packages/leptos/pagination",
    "packages/leptos/popover",
    "packages/leptos/progress",
    "packages/leptos/radio-group",
    "packages/leptos/scroll-area",
    "packages/leptos/select",
    "packages/leptos/separator",
    "packages/leptos/sheet",
    "packages/leptos/skeleton",
    "packages/leptos/slider",
    "packages/leptos/switch",
    "packages/leptos/table",
    "packages/leptos/tabs",
    "packages/leptos/textarea",
    "packages/leptos/toast",
    "packages/leptos/toggle",
    "packages/leptos/tooltip",
    "packages/leptos/utils",
    "packages/registry",
    "packages/shadcn",
    "packages/test-utils",
    "packages/component-generator",
    "scripts",
]

[workspace.package]
authors = ["CloudShuttle <info@cloudshuttle.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-shadcn-ui"
version = "0.1.0"

[workspace.dependencies]
leptos = "0.8.0"
leptos-node-ref = "0.1.0"
leptos-struct-component = "0.1.0"
leptos-style = "0.1.0"
tailwind_fuse = "0.1.0"
web-sys = "0.3.0"
wasm-bindgen-test = "0.3.0"
console_error_panic_hook = "0.1.0"
js-sys = "0.3.0"
serde_json = "1.0.203"
lucide-leptos = "0.1.0"
anyhow = "1.0.0"
tokio = { version = "1.0.0", features = ["full"] }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
handlebars = "4.0.0"
regex = "1.0.0"
env_logger = "0.11.0"
log = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }

